Prevent component resize overflow

--- a/rpl-src/src/app/component-list/component-list.component.css
+++ b/rpl-src/src/app/component-list/component-list.component.css
@@ -1,5 +1,10 @@
 /* -- Component List Styles -- */
 
+app-component-item {
+  box-sizing: border-box;
+  max-width: 100%;
+}
+
 .component-item {
   margin-bottom: calc(var(--page-gutter, 2rem) * 2);
 }
